src/main/java/br/ufc/qproject/frontend/qprojectParser.java
// Generated from /home/davigomes/Downloads/COMPILADORES/qproject-antlr/src/main/java/br/ufc/qproject/antlr4/qproject.g4 by ANTLR 4.7.2
package br.ufc.qproject.frontend;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class qprojectParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AMPER=1, SEMI=2, COLON=3, COMMA=4, LSHIFT=5, RSHIFT=6, STDCIN=7, STDCOUT=8, 
		STDENDL=9, AND=10, ARROW=11, ATRIB=12, DBLCOL=13, DECR=14, DIV=15, DOT=16, 
		EQ=17, GEQ=18, GT=19, INCR=20, LEQ=21, LT=22, MINUS=23, MOD=24, NEQ=25, 
		NOT=26, OR=27, PLUS=28, TIMES=29, DQUO=30, SQUO=31, LBRACE=32, RBRACE=33, 
		LPAREN=34, RPAREN=35, PUBLIC=36, PROTECTED=37, PRIVATE=38, STATIC=39, 
		STRUCT=40, IF=41, ELSE=42, WHILE=43, BREAK=44, RETURN=45, THIS=46, TRUE=47, 
		FALSE=48, CONST=49, VOID=50, INT=51, CHAR=52, BOOL=53, WHITE=54, DIR=55, 
		COM=56, CHARL=57, INTL=58, STRL=59, ID=60;
	public static final int
		RULE_programa = 0, RULE_lista_de_definicoes = 1, RULE_definicao = 2, RULE_estrutura = 3, 
		RULE_lista_estrutura_corpo = 4, RULE_estrutura_acesso = 5, RULE_lista_estrutura_membros = 6, 
		RULE_membro = 7, RULE_variavel = 8, RULE_variavel_atribuicao = 9, RULE_construtor = 10, 
		RULE_metodo = 11, RULE_funcao = 12, RULE_funcao_cabecalho = 13, RULE_parametros_formais = 14, 
		RULE_lista_parametros_formais = 15, RULE_tipo = 16, RULE_tipo_nome = 17, 
		RULE_qualificador = 18, RULE_decorador = 19, RULE_bloco = 20, RULE_lista_comandos = 21, 
		RULE_comando = 22, RULE_selecao = 23, RULE_selecao_senao = 24, RULE_repeticao = 25, 
		RULE_atribuicao = 26, RULE_retorno = 27, RULE_entrada = 28, RULE_lista_entrada_params = 29, 
		RULE_saida = 30, RULE_lista_saida_params = 31, RULE_lista_declaracoes_locais = 32, 
		RULE_expressao_comando = 33, RULE_expressao = 34, RULE_operador_binario = 35, 
		RULE_operador_unario = 36, RULE_nome = 37, RULE_nome_lista = 38, RULE_nome_one = 39, 
		RULE_parametros_reais = 40, RULE_lista_parametros_reais = 41;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "lista_de_definicoes", "definicao", "estrutura", "lista_estrutura_corpo", 
			"estrutura_acesso", "lista_estrutura_membros", "membro", "variavel", 
			"variavel_atribuicao", "construtor", "metodo", "funcao", "funcao_cabecalho", 
			"parametros_formais", "lista_parametros_formais", "tipo", "tipo_nome", 
			"qualificador", "decorador", "bloco", "lista_comandos", "comando", "selecao", 
			"selecao_senao", "repeticao", "atribuicao", "retorno", "entrada", "lista_entrada_params", 
			"saida", "lista_saida_params", "lista_declaracoes_locais", "expressao_comando", 
			"expressao", "operador_binario", "operador_unario", "nome", "nome_lista", 
			"nome_one", "parametros_reais", "lista_parametros_reais"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'&'", "';'", "':'", "','", "'<<'", "'>>'", "'std::cin'", "'std::cout'", 
			"'std::endl'", "'&&'", "'->'", "'='", "'::'", "'--'", "'/'", "'.'", "'=='", 
			"'>='", "'>'", "'++'", "'<='", "'<'", "'-'", "'%'", "'!='", "'!'", "'||'", 
			"'+'", "'*'", "'\"'", "'''", "'{'", "'}'", "'('", "')'", "'public'", 
			"'protected'", "'private'", "'static'", "'struct'", "'if'", "'else'", 
			"'while'", "'break'", "'return'", "'this'", "'true'", "'false'", "'const'", 
			"'void'", "'int'", "'char'", "'bool'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AMPER", "SEMI", "COLON", "COMMA", "LSHIFT", "RSHIFT", "STDCIN", 
			"STDCOUT", "STDENDL", "AND", "ARROW", "ATRIB", "DBLCOL", "DECR", "DIV", 
			"DOT", "EQ", "GEQ", "GT", "INCR", "LEQ", "LT", "MINUS", "MOD", "NEQ", 
			"NOT", "OR", "PLUS", "TIMES", "DQUO", "SQUO", "LBRACE", "RBRACE", "LPAREN", 
			"RPAREN", "PUBLIC", "PROTECTED", "PRIVATE", "STATIC", "STRUCT", "IF", 
			"ELSE", "WHILE", "BREAK", "RETURN", "THIS", "TRUE", "FALSE", "CONST", 
			"VOID", "INT", "CHAR", "BOOL", "WHITE", "DIR", "COM", "CHARL", "INTL", 
			"STRL", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "qproject.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public qprojectParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public Lista_de_definicoesContext lista_de_definicoes() {
			return getRuleContext(Lista_de_definicoesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(qprojectParser.EOF, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			lista_de_definicoes(0);
			setState(85);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Lista_de_definicoesContext extends ParserRuleContext {
		public DefinicaoContext definicao() {
			return getRuleContext(DefinicaoContext.class,0);
		}
		public Lista_de_definicoesContext lista_de_definicoes() {
			return getRuleContext(Lista_de_definicoesContext.class,0);
		}
		public Lista_de_definicoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_de_definicoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).enterLista_de_definicoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).exitLista_de_definicoes(this);
		}
	}

	public final Lista_de_definicoesContext lista_de_definicoes() throws RecognitionException {
		return lista_de_definicoes(0);
	}

	private Lista_de_definicoesContext lista_de_definicoes(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Lista_de_definicoesContext _localctx = new Lista_de_definicoesContext(_ctx, _parentState);
		Lista_de_definicoesContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_lista_de_definicoes, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(88);
			definicao();
			}
			_ctx.stop = _input.LT(-1);
			setState(94);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Lista_de_definicoesContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_lista_de_definicoes);
					setState(90);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(91);
					definicao();
					}
					} 
				}
				setState(96);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class DefinicaoContext extends ParserRuleContext {
		public FuncaoContext funcao() {
			return getRuleContext(FuncaoContext.class,0);
		}
		public EstruturaContext estrutura() {
			return getRuleContext(EstruturaContext.class,0);
		}
		public DefinicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).enterDefinicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).exitDefinicao(this);
		}
	}

	public final DefinicaoContext definicao() throws RecognitionException {
		DefinicaoContext _localctx = new DefinicaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definicao);
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONST:
			case VOID:
			case INT:
			case CHAR:
			case BOOL:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				funcao();
				}
				break;
			case STRUCT:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				estrutura();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EstruturaContext extends ParserRuleContext {
		public TerminalNode STRUCT() { return getToken(qprojectParser.STRUCT, 0); }
		public TerminalNode ID() { return getToken(qprojectParser.ID, 0); }
		public TerminalNode LBRACE() { return getToken(qprojectParser.LBRACE, 0); }
		public Lista_estrutura_corpoContext lista_estrutura_corpo() {
			return getRuleContext(Lista_estrutura_corpoContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(qprojectParser.RBRACE, 0); }
		public TerminalNode SEMI() { return getToken(qprojectParser.SEMI, 0); }
		public EstruturaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estrutura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).enterEstrutura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).exitEstrutura(this);
		}
	}

	public final EstruturaContext estrutura() throws RecognitionException {
		EstruturaContext _localctx = new EstruturaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_estrutura);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(STRUCT);
			setState(102);
			match(ID);
			setState(103);
			match(LBRACE);
			setState(104);
			lista_estrutura_corpo(0);
			setState(105);
			match(RBRACE);
			setState(106);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Lista_estrutura_corpoContext extends ParserRuleContext {
		public Estrutura_acessoContext estrutura_acesso() {
			return getRuleContext(Estrutura_acessoContext.class,0);
		}
		public Lista_estrutura_corpoContext lista_estrutura_corpo() {
			return getRuleContext(Lista_estrutura_corpoContext.class,0);
		}
		public Lista_estrutura_corpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_estrutura_corpo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).enterLista_estrutura_corpo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).exitLista_estrutura_corpo(this);
		}
	}

	public final Lista_estrutura_corpoContext lista_estrutura_corpo() throws RecognitionException {
		return lista_estrutura_corpo(0);
	}

	private Lista_estrutura_corpoContext lista_estrutura_corpo(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Lista_estrutura_corpoContext _localctx = new Lista_estrutura_corpoContext(_ctx, _parentState);
		Lista_estrutura_corpoContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_lista_estrutura_corpo, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(109);
			estrutura_acesso();
			}
			_ctx.stop = _input.LT(-1);
			setState(115);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Lista_estrutura_corpoContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_lista_estrutura_corpo);
					setState(111);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(112);
					estrutura_acesso();
					}
					} 
				}
				setState(117);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Estrutura_acessoContext extends ParserRuleContext {
		public TerminalNode PUBLIC() { return getToken(qprojectParser.PUBLIC, 0); }
		public TerminalNode COLON() { return getToken(qprojectParser.COLON, 0); }
		public Lista_estrutura_membrosContext lista_estrutura_membros() {
			return getRuleContext(Lista_estrutura_membrosContext.class,0);
		}
		public TerminalNode PROTECTED() { return getToken(qprojectParser.PROTECTED, 0); }
		public Estrutura_acessoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estrutura_acesso; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).enterEstrutura_acesso(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).exitEstrutura_acesso(this);
		}
	}

	public final Estrutura_acessoContext estrutura_acesso() throws RecognitionException {
		Estrutura_acessoContext _localctx = new Estrutura_acessoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_estrutura_acesso);
		try {
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PUBLIC:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				match(PUBLIC);
				setState(119);
				match(COLON);
				setState(120);
				lista_estrutura_membros(0);
				}
				break;
			case PROTECTED:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				match(PROTECTED);
				setState(122);
				match(COLON);
				setState(123);
				lista_estrutura_membros(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Lista_estrutura_membrosContext extends ParserRuleContext {
		public MembroContext membro() {
			return getRuleContext(MembroContext.class,0);
		}
		public Lista_estrutura_membrosContext lista_estrutura_membros() {
			return getRuleContext(Lista_estrutura_membrosContext.class,0);
		}
		public Lista_estrutura_membrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_estrutura_membros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).enterLista_estrutura_membros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).exitLista_estrutura_membros(this);
		}
	}

	public final Lista_estrutura_membrosContext lista_estrutura_membros() throws RecognitionException {
		return lista_estrutura_membros(0);
	}

	private Lista_estrutura_membrosContext lista_estrutura_membros(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Lista_estrutura_membrosContext _localctx = new Lista_estrutura_membrosContext(_ctx, _parentState);
		Lista_estrutura_membrosContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_lista_estrutura_membros, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(127);
			membro();
			}
			_ctx.stop = _input.LT(-1);
			setState(133);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Lista_estrutura_membrosContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_lista_estrutura_membros);
					setState(129);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(130);
					membro();
					}
					} 
				}
				setState(135);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class MembroContext extends ParserRuleContext {
		public ConstrutorContext construtor() {
			return getRuleContext(ConstrutorContext.class,0);
		}
		public VariavelContext variavel() {
			return getRuleContext(VariavelContext.class,0);
		}
		public MetodoContext metodo() {
			return getRuleContext(MetodoContext.class,0);
		}
		public TerminalNode STATIC() { return getToken(qprojectParser.STATIC, 0); }
		public FuncaoContext funcao() {
			return getRuleContext(FuncaoContext.class,0);
		}
		public MembroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_membro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).enterMembro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).exitMembro(this);
		}
	}

	public final MembroContext membro() throws RecognitionException {
		MembroContext _localctx = new MembroContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_membro);
		try {
			setState(143);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				construtor();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				variavel();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(138);
				metodo();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(139);
				match(STATIC);
				setState(140);
				variavel();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(141);
				match(STATIC);
				setState(142);
				funcao();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariavelContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(qprojectParser.ID, 0); }
		public TerminalNode SEMI() { return getToken(qprojectParser.SEMI, 0); }
		public VariavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variavel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).enterVariavel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).exitVariavel(this);
		}
	}

	public final VariavelContext variavel() throws RecognitionException {
		VariavelContext _localctx = new VariavelContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_variavel);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			tipo();
			setState(146);
			match(ID);
			setState(147);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variavel_atribuicaoContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(qprojectParser.ID, 0); }
		public TerminalNode ATRIB() { return getToken(qprojectParser.ATRIB, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(qprojectParser.SEMI, 0); }
		public Variavel_atribuicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variavel_atribuicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).enterVariavel_atribuicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).exitVariavel_atribuicao(this);
		}
	}

	public final Variavel_atribuicaoContext variavel_atribuicao() throws RecognitionException {
		Variavel_atribuicaoContext _localctx = new Variavel_atribuicaoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_variavel_atribuicao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			tipo();
			setState(150);
			match(ID);
			setState(151);
			match(ATRIB);
			setState(152);
			expressao(0);
			setState(153);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstrutorContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(qprojectParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(qprojectParser.LPAREN, 0); }
		public Parametros_formaisContext parametros_formais() {
			return getRuleContext(Parametros_formaisContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(qprojectParser.RPAREN, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public ConstrutorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_construtor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).enterConstrutor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof qprojectListener ) ((qprojectListener)listener).exitConstrutor(this);
		}
	}

	public final ConstrutorContext construtor() throws RecognitionException {
		ConstrutorContext _localctx = new ConstrutorContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_construtor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(ID);
			setState(156);
			match(LPAREN);
			setState(157);
			parametros_formais();
			setState(158);
			match(RPAREN);
			setState(159);
			bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
